feat(search): [BH-288] migrate recent search from Redis to MongoDB and fix ObjectId conversion issues